# TxTFileAnalyzer

./: Cargo.toml
src/: custom_errors.rs  main.rs
